--- a/charts/templates/letsencrypt-cert-issuer.yaml
+++ b/charts/templates/letsencrypt-cert-issuer.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.config.enable_tls }}
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
@@ -17,3 +18,24 @@ spec:
       - http01:
           ingress:
             class: nginx
+---
+apiVersion: cert-manager.io/v1
+kind: Issuer
+metadata:
+  name: letsencrypt-prod
+spec:
+  acme:
+    # The ACME server URL
+    server: https://acme-v02.api.letsencrypt.org/directory
+    # Email address used for ACME registration
+    # email: tarashish@developmentseed.org
+    email: ping.chen1@monash.edu
+    # Name of a secret used to store the ACME account private key
+    privateKeySecretRef:
+      name: letsencrypt-prod-key
+    # Enable the HTTP-01 challenge provider
+    solvers:
+      - http01:
+          ingress:
+            class: nginx
+{{- end }}
