--- a/.github/workflows/charts-release.yml
+++ b/.github/workflows/charts-release.yml
@@ -24,6 +24,10 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v3
 
+      - name: My action
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         with:
