--- a/.github/workflows/helm.yml
+++ b/.github/workflows/helm.yml
@@ -23,7 +23,9 @@ jobs:
 
       - name: Install Helm
         uses: azure/setup-helm@v3
-
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+  
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         with:
